bk_ida/gccida/c3/check_ext_dependent_givs
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_ext_dependent_givs/src/loop.c:7717:1: error: use of undeclared identifier 'induction_1'
induction_1 *v; // [rsp+68h] [rbp-48h] 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_ext_dependent_givs/src/loop.c:7717:14: error: use of undeclared identifier 'v'
induction_1 *v; // [rsp+68h] [rbp-48h] 
             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_ext_dependent_givs/src/loop.c:7722:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode biv_mode; // [rsp+90h] [rbp-20h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_ext_dependent_givs/src/loop.c:7801:7: error: use of undeclared identifier 'v'
for ( v = bl_0->giv; v; v = v->next_iv ) 
      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_ext_dependent_givs/src/loop.c:7801:22: error: use of undeclared identifier 'v'
for ( v = bl_0->giv; v; v = v->next_iv ) 
                     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_ext_dependent_givs/src/loop.c:7801:25: error: use of undeclared identifier 'v'
for ( v = bl_0->giv; v; v = v->next_iv ) 
                        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_ext_dependent_givs/src/loop.c:7801:29: error: use of undeclared identifier 'v'
for ( v = bl_0->giv; v; v = v->next_iv ) 
                            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_ext_dependent_givs/src/loop.c:7803:6: error: use of undeclared identifier 'v'
if ( v->ext_dependent ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_ext_dependent_givs/src/loop.c:7806:17: error: use of undeclared identifier 'v'
v2 = *( _WORD *)v->ext_dependent; 
                ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_ext_dependent_givs/src/loop.c:7823:60: error: use of undeclared identifier 'v'
max = mode_mask_array[( unsigned __int8)BYTE2( *( _DWORD *)v->ext_dependent)] >> 1; 
                                                           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_ext_dependent_givs/src/loop.c:7832:76: error: use of undeclared identifier 'v'
fprintf( loop_dump_stream, "Verified ext dependent giv at %d of reg %d\n", v->insn->fld[0].rtuint, bl_0->regno); 
                                                                           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_ext_dependent_givs/src/loop.c:7843:1: error: use of undeclared identifier 'v'
v->insn->fld[0].rtuint, 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_ext_dependent_givs/src/loop.c:7854:1: error: use of undeclared identifier 'v'
v->insn->fld[0].rtuint, 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_ext_dependent_givs/src/loop.c:7860:1: error: use of undeclared identifier 'v'
v->insn->fld[0].rtuint, 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_ext_dependent_givs/src/loop.c:7864:14: error: use of undeclared identifier 'v'
*( ( _WORD *)v + 50) = *( ( _WORD *)v + 50) & 0xFFFB | 4; 
             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_ext_dependent_givs/src/loop.c:7864:37: error: use of undeclared identifier 'v'
*( ( _WORD *)v + 50) = *( ( _WORD *)v + 50) & 0xFFFB | 4; 
                                    ^
16 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_ext_dependent_givs/src/obj/loop.o] Error 1
